# obsidian-whisper

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  esbuild.config.mjs  manifest.json  package.json  pnpm-lock.yaml  test.js  tsconfig.json
src/: addon.cpp  main.ts  test.js
